--- a/src/3rd_party/pathie-cpp/CMakeLists.txt
+++ b/src/3rd_party/pathie-cpp/CMakeLists.txt
@@ -4,7 +4,11 @@ include_directories(include)
 
 FILE(GLOB PathieCppSources src/*.cpp)
 if (NOT TARGET pathie-cpp)
-  find_package(Iconv REQUIRED)
   add_library(pathie-cpp OBJECT ${PathieCppSources})
-  target_link_libraries(pathie-cpp PRIVATE ${Iconv_LIBRARIES})
+  find_package(Iconv)
+  if(Iconv_FOUND)
+    target_link_libraries(pathie-cpp ${Iconv_LIBRARIES} ${Iconv_LIBRARY})
+  else(Iconv_FOUND)
+    message(SEND_ERROR "Cannot find iconv libraries. Terminating.")
+  endif(Iconv_FOUND)
 endif()
