Added iconv libraries to EXT_LIBS

--- a/src/3rd_party/pathie-cpp/CMakeLists.txt
+++ b/src/3rd_party/pathie-cpp/CMakeLists.txt
@@ -7,6 +7,7 @@ if (NOT TARGET pathie-cpp)
   add_library(pathie-cpp OBJECT ${PathieCppSources})
   find_package(Iconv)
   if(Iconv_FOUND)
+    set(EXT_LIBS ${EXT_LIBS} ${Iconv_LIBRARIES} ${Iconv_LIBRARY})
     target_link_libraries(pathie-cpp ${Iconv_LIBRARIES} ${Iconv_LIBRARY})
   else(Iconv_FOUND)
     message(SEND_ERROR "Cannot find iconv libraries. Terminating.")
